Fixed bug #25669 (eregi() with non-ascii characters)